---
source: crates/preprocessor/tests/main.rs
assertion_line: 724
expression: "SourcepawnPreprocessor::new(FileId::from(0), input,\n                &mut extend_macros).preprocess_input().preprocessed_text().as_ref()"
---
#define FOO(%0,%1) %0 + %1
#define BAR(%0,%1) 1 + FOO(%0, %1)
int foo = 1 + 2 + 3

